[package]
name = "rustscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false

[dependencies]
atty = "0.2"
async-trait = "0.1"
armada_lib = "1.0" 
cidr-utils = "0.5"
clap = { version = "2.33", features = ["yaml"] }
console = "0.14"
indicatif = "0.15"
rand = "0.8.3"
regex = "1.4"
lazy_static = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
