[package]
name = "rustscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true

[dependencies]
tokio = { version = "1.8.3", features = ["full"] }
structopt = "0.3.21"